--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -2,11 +2,10 @@
 # Copyright (C) 2024 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Homm package.
 # Automatically generated, 2024.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-01-22 14:01+0000\n"
 "Last-Translator: Damian Sobkowiak <sopek1996@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -35,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -82,7 +81,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -577,7 +576,7 @@ msgid ""
 "  \\item Your Hero's maximum Level is 6.\n"
 "  \\item All buildings are unavailable, building is not possible.\n"
 "  \\item All neutral enemies fight using the Neutral Enemy Deck.\n"
-"  \\item Each time you visit a Trading Post, draw the top Cards from the \\bronze\\ bronze, \\silver\\ silver, and \\golden\\ golden neutral enemy Decks.\n"
+"  \\item Each time you visit a Trading Post, draw the top Cards from the \\svg{bronze} bronze, \\svg{silver} silver, and \\svg{golden} golden neutral enemy Decks.\n"
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
 "  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
@@ -591,7 +590,7 @@ msgstr ""
 "  \\item Maksymalny Poziom twojego Bohatera~to~6.\n"
 "  \\item Wszystkie budynki są niedostępne, budowanie jest niemożliwe.\n"
 "  \\item Wszystkie Neutralne Jednostki walczą używając Talii Neutralnych Wrogów.\n"
-"  \\item Za każdym razem gdy odwiedzasz Punkt Handlowy, dobierz wierzchnie Karty z talii Neutralnych Jednostek \\bronze\\ brązowych, \\silver\\ srebrnych i \\golden\\ złotych.\n"
+"  \\item Za każdym razem gdy odwiedzasz Punkt Handlowy, dobierz wierzchnie Karty z talii Neutralnych Jednostek \\svg{bronze} brązowych, \\svg{silver} srebrnych i \\svg{golden} złotych.\n"
 "    Możesz zrekrutować dowolną liczbę z nich, płacąc ich koszt.\n"
 "    Wtasuj wszystkie niezrekrutowane Jednostki z powrotem do ich Talii.\n"
 "  \\item Możesz sprzedać Graala w Punkcie Handlowym za 30 \\svg{gold} \\textit{albo} \\textbf{dwa razy Przeszukać (3)} talię Reliktów.\n"
@@ -877,14 +876,14 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}\n"
 "  \\item \\textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.\n"
-"    If you choose not to, you may in the future by spending one \\svg{movement} at this Obelisk.}\n"
+"    If you choose not to, you may in the future by spending one \\svg{movement-red} at this Obelisk.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Dodaj Garstkę Archaniołów do swojej armii.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Możesz teraz teleportować się do miasta wroga na Kafelku S1.\n"
-"  Jeśli nie zdecydujesz się na to teraz, możesz to zrobić później, wydając jeden \\svg{movement} przy tym Obelisku.}\n"
+"  Jeśli nie zdecydujesz się na to teraz, możesz to zrobić później, wydając jeden \\svg{movement-red} przy tym Obelisku.}\n"
 "\\end{itemize}\n"
 "\n"
 
