--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -2,11 +2,10 @@
 # Copyright (C) 2025 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Homm package.
 # Automatically generated, 2025.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-10-23 21:18+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-06-22 00:57+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -33,7 +32,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -52,7 +51,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -68,7 +67,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -81,7 +80,7 @@ msgstr ""
 #: coops/sentinels.tex:142 coops/stand_united.tex:87
 #: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
 #: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
-#: sections/credits.tex:28 sections/random_scenario.tex:304
+#: sections/credits.tex:28 sections/random_scenario.tex:296
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -95,7 +94,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:316
+#: sections/credits.tex:34 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -561,37 +560,8 @@ msgstr "\\MakeUppercase{Przygotowanie Graczy}"
 msgid "Choose your \\textbf{starting conditions} and \\textbf{Town strength}."
 msgstr "Wybierz \\textbf{warunki początkowe} i \\textbf{siłę Miasta}."
 
-#. type: Plain text
-#: sections/random_scenario.tex:244
-msgid ""
-"\\let\\origbronze\\bronze \\let\\origsilver\\silver "
-"\\let\\origgolden\\golden \\let\\origazure\\azure"
-msgstr ""
-"\\let\\origbronze\\bronze \\let\\origsilver\\silver "
-"\\let\\origgolden\\golden \\let\\origazure\\azure"
-
-#. type: renewcommand{#4}
-#: sections/random_scenario.tex:244
-msgid "\\origbronze[12]"
-msgstr "\\origbronze[12]"
-
-#. type: renewcommand{#4}
-#: sections/random_scenario.tex:244
-msgid "\\origsilver[12]"
-msgstr "\\origsilver[12]"
-
-#. type: renewcommand{#4}
-#: sections/random_scenario.tex:244
-msgid "\\origgolden[12]"
-msgstr "\\origgolden[12]"
-
-#. type: renewcommand{#4}
-#: sections/random_scenario.tex:244
-msgid "\\origazure[12]"
-msgstr "\\origazure[12]"
-
 #. type: table*
-#: sections/random_scenario.tex:283
+#: sections/random_scenario.tex:273
 #, no-wrap
 msgid ""
 "  \\hommtable[]{27}{\n"
@@ -602,9 +572,9 @@ msgid ""
 "\n"
 "    \\begin{tabularx}{0.99\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Stingy} & \\darkcell{Fair} & \\darkcell{Generous}\\\\\n"
 "    \\darkcell[1.4]{Army}\n"
-"      & \\lightcellleft[1.4]{2 × Few cheapest \\bronze\\ Units}\n"
-"      & \\lightcellleft[1.4]{Pack of cheap \\bronze\\ Units \\linebreak Few chosen \\bronze\\ Units}\n"
-"      & \\lightcellleft[1.4]{Pack of chosen \\bronze\\ Units \\linebreak Few cheap \\silver\\ Units}\\\\\n"
+"      & \\lightcellleft[1.4]{2 × Few cheapest \\svg[12]{bronze} Units}\n"
+"      & \\lightcellleft[1.4]{Pack of cheap \\svg[12]{bronze} Units \\linebreak Few chosen \\svg[12]{bronze} Units}\n"
+"      & \\lightcellleft[1.4]{Pack of chosen \\svg[12]{bronze} Units \\linebreak Few cheap \\svg[12]{silver} Units}\\\\\n"
 "    \\darkcell[1.4]{Starting Resources}\n"
 "      & \\lightcellleft[1.4]{10 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}}\n"
 "      & \\lightcellleft[1.4]{16 \\svg{gold}, 5 \\svg{building_materials}, 1 \\svg{valuables}}\n"
@@ -624,9 +594,9 @@ msgid ""
 "      & \\lightcellleft[1.4]{15 \\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}}\n"
 "      & \\lightcellleft[1.4]{20 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}}\\\\\n"
 "    \\darkcell[2.0]{Town Buildings}\n"
-"      & \\lightcellleft[2.0]{\\bronze\\ Dwelling}\n"
-"      & \\lightcellleft[2.0]{\\bronze\\ Dwelling \\linebreak City Hall}\n"
-"      & \\lightcellleft[2.0]{\\bronze\\ Dwelling \\linebreak City Hall \\linebreak Citadel}\\\\\n"
+"      & \\lightcellleft[2.0]{\\svg[12]{bronze} Dwelling}\n"
+"      & \\lightcellleft[2.0]{\\svg[12]{bronze} Dwelling \\linebreak City Hall}\n"
+"      & \\lightcellleft[2.0]{\\svg[12]{bronze} Dwelling \\linebreak City Hall \\linebreak Citadel}\\\\\n"
 "    \\end{tabularx}\n"
 "  }"
 msgstr ""
@@ -638,9 +608,9 @@ msgstr ""
 "\n"
 "    \\begin{tabularx}{0.99\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Skąpe} & \\darkcell{Uczciwe} & \\darkcell{Hojne}\\\\\n"
 "    \\darkcell[2.4]{Armia}\n"
-"      & \\lightcellleft[2.4]{2 × Garstka najtańszych \\bronze\\ Jednostek}\n"
-"      & \\lightcellleft[2.4]{Grupa najtańszych \\bronze\\ Jednostek \\linebreak Garstka wybranych \\bronze\\ Jednostek}\n"
-"      & \\lightcellleft[2.4]{Grupa wybranych \\bronze\\ Jednostek \\linebreak Garstka najtańszych \\silver\\ Jednostek}\\\\\n"
+"      & \\lightcellleft[2.4]{2 × Garstka najtańszych \\svg{bronze} Jednostek}\n"
+"      & \\lightcellleft[2.4]{Grupa najtańszych \\svg{bronze} Jednostek \\linebreak Garstka wybranych \\svg{bronze} Jednostek}\n"
+"      & \\lightcellleft[2.4]{Grupa wybranych \\svg{bronze} Jednostek \\linebreak Garstka najtańszych \\svg{silver} Jednostek}\\\\\n"
 "    \\darkcell[1.4]{Zasoby}\n"
 "      & \\lightcellleft[1.4]{10 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}}\n"
 "      & \\lightcellleft[1.4]{16 \\svg{gold}, 5 \\svg{building_materials}, 1 \\svg{valuables}}\n"
@@ -659,14 +629,14 @@ msgstr ""
 "      & \\lightcellleft[1.4]{15 \\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}}\n"
 "      & \\lightcellleft[1.4]{20 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}}\\\\\n"
 "    \\darkcell[2.0]{Budynki Miasta}\n"
-"      & \\lightcellleft[2.0]{\\bronze\\ Siedlisko}\n"
-"      & \\lightcellleft[2.0]{\\bronze\\ Siedlisko \\linebreak Ratusz}\n"
-"      & \\lightcellleft[2.0]{\\bronze\\ Siedlisko \\linebreak Ratusz \\linebreak Cytadela}\\\\\n"
+"      & \\lightcellleft[2.0]{\\svg{bronze} Siedlisko}\n"
+"      & \\lightcellleft[2.0]{\\svg{bronze} Siedlisko \\linebreak Ratusz}\n"
+"      & \\lightcellleft[2.0]{\\svg{bronze} Siedlisko \\linebreak Ratusz \\linebreak Cytadela}\\\\\n"
 "    \\end{tabularx}\n"
 "  }"
 
 #. type: multicols
-#: sections/random_scenario.tex:304
+#: sections/random_scenario.tex:294
 #, no-wrap
 msgid ""
 "\\textbf{\\nth{1} Round:}\n"
@@ -706,7 +676,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/random_scenario.tex:314
+#: sections/random_scenario.tex:304
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
