--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -2,11 +2,10 @@
 # Copyright (C) 2024 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Homm package.
 # Automatically generated, 2024.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-10-19 12:57+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -35,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -64,8 +63,8 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units with the \\textit{lowest} Recruitment cost\n"
-"  \\item A Few \\bronze\\ Units with the \\textit{highest} Recruitment cost\n"
+"  \\item A Pack of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -99,7 +98,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -115,7 +114,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -212,10 +211,10 @@ msgstr ""
 #: clash/the_hunt.tex:31 campaigns/inferno_devilish_plan.tex:41
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling, City Hall\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, City Hall\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko, Ratusz\n"
+"\\textbf{Budynki Początkowe:} \\svg{bronze} Siedlisko, Ratusz\n"
 "\n"
 
 #. type: multicols*
@@ -433,7 +432,7 @@ msgstr ""
 "\n"
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:150
+#: clash/the_hunt.tex:151
 msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}"
 "[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
@@ -444,7 +443,7 @@ msgstr ""
 "{\\art/azure_dragon.jpg}}"
 
 #. type: Plain text
-#: clash/the_hunt.tex:150
+#: clash/the_hunt.tex:151
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Azure Dragon}} \\medskip \\textit{Little is "
 "known of the Azure Dragon.  It is both rare and mighty, thus few have seen "
@@ -496,7 +495,7 @@ msgstr ""
 "skuteczne. \\end{itemize} }"
 
 #. type: table*
-#: clash/the_hunt.tex:179
+#: clash/the_hunt.tex:171
 #, no-wrap
 msgid ""
 "[h]\n"
@@ -504,20 +503,11 @@ msgid ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Impossible}}\\\\\n"
 "    \\lightcell[1.8]{No additional\\\\changes} &\n"
 "    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 22} &\n"
 "    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 30} &\n"
@@ -530,20 +520,11 @@ msgstr ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Łatwy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normalny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Trudny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Niemożliwy}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Łatwy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normalny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Trudny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Niemożliwy}}\\\\\n"
 "    \\lightcell[1.8]{Bez dodatkowych\\\\zmian} &\n"
 "    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 22} &\n"
 "    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 30} &\n"
@@ -552,7 +533,7 @@ msgstr ""
 "  }"
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:221
+#: clash/the_hunt.tex:213
 msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}"
 "[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
@@ -563,7 +544,7 @@ msgstr ""
 "{\\art/crystal_dragon.jpg}}"
 
 #. type: Plain text
-#: clash/the_hunt.tex:221
+#: clash/the_hunt.tex:213
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
 "entirely from red crystal and brought to life through magical means, the "
@@ -615,7 +596,7 @@ msgstr ""
 "\\textit{kontratakuje dwukrotnie}. \\end{itemize} }"
 
 #. type: table*
-#: clash/the_hunt.tex:251
+#: clash/the_hunt.tex:234
 #, no-wrap
 msgid ""
 "[h]\n"
@@ -623,20 +604,11 @@ msgid ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Impossible}}\\\\\n"
 "    \\lightcell[2.8]{No additional\\\\changes} &\n"
 "    \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 22} &\n"
 "    \\lightcell[2.8]{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} &\n"
@@ -649,20 +621,11 @@ msgstr ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Łatwy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normalny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Trudny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Niemożliwy}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Łatwy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normalny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Trudny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Niemożliwy}}\\\\\n"
 "    \\lightcell[2.8]{Bez dodatkowych\\\\zmian} &\n"
 "    \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 22} &\n"
 "    \\lightcell[2.8]{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Kontratak}} &\n"
@@ -671,7 +634,7 @@ msgstr ""
 "  }"
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:292
+#: clash/the_hunt.tex:275
 msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}"
 "[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
@@ -682,7 +645,7 @@ msgstr ""
 "{\\art/rust_dragon.jpg}}"
 
 #. type: Plain text
-#: clash/the_hunt.tex:292
+#: clash/the_hunt.tex:275
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Rust Dragon {\\scriptsize Requires Fortress "
 "Expansion}}} \\medskip \\textit{Rust Dragons are known to hunt Gorgons, and "
@@ -731,7 +694,7 @@ msgstr ""
 "\\svg{defense}. \\end{itemize} }"
 
 #. type: table*
-#: clash/the_hunt.tex:322
+#: clash/the_hunt.tex:296
 #, no-wrap
 msgid ""
 "[h]\n"
@@ -739,20 +702,11 @@ msgid ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Impossible}}\\\\\n"
 "    \\lightcell[2.5]{No additional\\\\changes} &\n"
 "    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 20} &\n"
 "    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32} &\n"
@@ -765,20 +719,11 @@ msgstr ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Łatwy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normalny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Trudny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Niemożliwy}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Łatwy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normalny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Trudny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Niemożliwy}}\\\\\n"
 "    \\lightcell[2.5]{Bez dodatkowych\\\\zmian} &\n"
 "    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 20} &\n"
 "    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32} &\n"
@@ -787,7 +732,7 @@ msgstr ""
 "  }"
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:371
+#: clash/the_hunt.tex:346
 msgid ""
 "{l}{0.28\\textwidth} \\raisebox{0pt}"
 "[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
@@ -798,7 +743,7 @@ msgstr ""
 "{\\art/faerie_dragon.jpg}}"
 
 #. type: Plain text
-#: clash/the_hunt.tex:371
+#: clash/the_hunt.tex:346
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Faerie Dragon {\\scriptsize Requires "
 "Rampart Expansion}}} \\medskip \\textit{Faerie Dragons are deceptively cute, "
@@ -857,7 +802,7 @@ msgstr ""
 "Zaklęć. \\end{itemize} }"
 
 #. type: table*
-#: clash/the_hunt.tex:400
+#: clash/the_hunt.tex:366
 #, no-wrap
 msgid ""
 "[h]\n"
@@ -865,20 +810,11 @@ msgid ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Impossible}}\\\\\n"
 "    \\lightcell[1.6]{No additional\\\\changes} &\n"
 "    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 18} &\n"
 "    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 26} &\n"
@@ -891,20 +827,11 @@ msgstr ""
 "    \\centering\n"
 "    \\medskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
-"    \\renewcommand{\\azure}{\\origazure[20]}\n"
-"\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Łatwy}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normalny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Trudny}} &\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Niemożliwy}}\\\\\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Łatwy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normalny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Trudny}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Niemożliwy}}\\\\\n"
 "    \\lightcell[1.6]{Bez dodatkowych\\\\zmian} &\n"
 "    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 18} &\n"
 "    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 26} &\n"
